# idea_maker

./: README.md  pyproject.toml  run.sh
idea_maker/: app.py
