[tool.poetry]
name = "idea_maker"
version = "0.1.0"
description = "Swarm based agent system to generate ideas"
authors = ["Guillermo Martín-Coello <guillermo.martincoello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
swarm = {git = "https://github.com/openai/swarm.git"}
duckduckgo-search = "^6.3.2"
markdown-pdf = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
